fixed an ie issue with overflows

--- a/scrollable-table.css
+++ b/scrollable-table.css
@@ -75,6 +75,7 @@
     position: absolute;
     top: 36px;
     height: 54px;
+    z-index: 1;
     padding: 8px;
 }
 /*
